# market-data-platform

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: universe.yaml
docs/: architecture.md  data_model.md
infra/: docker-compose.yml
scripts/: ingest_universe.py
src/market_data_platform/backtest/: __init__.py  engine.py  metrics.py
src/market_data_platform/canonical/: __init__.py  normalizer.py  writer.py
src/market_data_platform/costs/: __init__.py  commission.py  cost_engine.py  slippage.py  spread.py
src/market_data_platform/ingestion/: .gitkeep  batch_ingest.py
src/market_data_platform/quality/: __init__.py  checks.py
src/market_data_platform/research/: __init__.py  cross_section.py  features.py  forward_returns.py
src/market_data_platform/storage/: __init__.py  duckdb_client.py  schema_registry.py
src/market_data_platform/validation/: __init__.py  oos_evaluator.py  regime_filter.py  walk_forward.py
tests/backtest/: __init__.py  test_engine.py  test_metrics.py
tests/canonical/: __init__.py  test_normalizer.py
tests/costs/: test_commission.py  test_cost_engine.py  test_slippage.py  test_spread.py
tests/quality/: __init__.py  test_checks.py
tests/research/: __init__.py  test_cross_section.py  test_features.py  test_forward_returns.py
tests/storage/: __init__.py  test_duckdb_client.py
tests/validation/: test_oos_evaluator.py  test_regime_filter.py  test_walk_forward.py
