[project]
name = "market-data-platform"
version = "0.1.0"
description = "Production-grade market data ingestion and time-series infrastructure"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pyarrow",
    "fastparquet",
    "yfinance",
    "duckdb>=0.10.0",
    "pandera>=0.18.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
]
